--- a/photo.html
+++ b/photo.html
@@ -31,8 +31,8 @@
 		<img src="imgs/freshman/LucicI_03b.jpg" alt="Shelby smiling" class="img">
 		<img src="imgs/freshman/LucicI_04a.jpg" alt="Downtown Athens" class="img">
 		<img src="imgs/freshman/LucicI_04d.jpg" alt="Paetton posing" class="img">
-		</div>
-		<div class="column">
+		<!-- </div> -->
+		<!-- <div class="column"> -->
 		<img src="imgs/freshman/LucicI_04e.jpg" alt="Hannah modeling" class="img">
 		<img src="imgs/freshman/LucicI_05a.jpg" alt="Hannah behind a berry bush" class="img">
 		<img src="imgs/freshman/LucicI_05b.jpg" alt="Rhyan with Purple filter" class="img">
