--- a/photoshop.html
+++ b/photoshop.html
@@ -29,8 +29,8 @@
 		<img src="imgs/junior/Lucic_I_exe01_v002.jpg" alt="Photoshopped man infront of background" class="img">
 		<img src="imgs/junior/LucicIan_BlendingModeV1_1.jpg" alt="RGB Lady GaGa like model" class="img">
 		<img src="imgs/junior/LucicIan_BlendingModeV1_2.jpg" alt="Black and White Model with Color" class="img">
-		</div>
-		<div class="column">
+		<!-- </div> -->
+		<!-- <div class="column"> -->
 		<img src="imgs/junior/LucicIan_Creative01.2.jpg" alt="Trippy Savannah" class="img">
 		<img src="imgs/junior/LucicIan_Creative01.jpg" alt="Trippy Drippy Model with Rainbow" class="img">
 		</div>
