--- a/indesign.html
+++ b/indesign.html
@@ -29,9 +29,8 @@
 		<img src="imgs/sophomore/CookBook.jpg" alt="Lentil Spread" class="img">
 		<img src="imgs/sophomore/GayCowboy_Exercise1.jpg"alt="Gay Cowbowy Article" class="img">
 		<img src="imgs/sophomore/Archie.png" alt="Archie Article" class="img">
-		
-		</div>
-		<div class="column">
+		<!-- </div> -->
+		<!-- <div class="column"> -->
 		<img src="imgs/sophomore/futura2.jpg" alt="Futura Poster" class="img">
 		<img src="imgs/sophomore/CookBookv1.jpg" alt="Dount Spread" class="img">
 		<img src="imgs/sophomore/Dani.png" alt="Dani Article" class="img">
