--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 	<h5>Click around to view my work!</h5>
 </div>
 
+<h3>Contact Me!</h3>
+<div class="form">
+	<form>
+		<label for="name">Name:</label><br>
+		<input type="text" id="name" name="name"><br><br>
+		<label for="email">Email Adresss:</label><br>
+		<input type="text" id="email" name="email"><br><br>
+		<input type="submit" value="Submit">
+	</form>
+</div>
 
 
 <footer>
