--- a/photoshop.html
+++ b/photoshop.html
@@ -20,7 +20,7 @@
 	<div>
 		<h2>PHOTOSHOP WORK</h2>
 		<div class="text">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Welcome to my Photoshop Work! All work was created while I was studying at Ohio University-Athens for my Picture Editing course during the Fall of 2020. All work shown is from different completed assignments throughout the semester, with all work being created using Adobe Photoshop CC.</p>
 		</div>
 	</div>
 
